# saga-reader

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README_zh.md  package.json
.ai-context/: DYNAMICS.md  SKILL.md
.ai-context/meta/: MAINTENANCE.md
.ai-context/references/: ARCHITECTURE.md  DECISIONS.md  PROJECT-ESSENCE.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
app/: .gitignore  package.json  tailwind.config.js  vite.config.ts
app/src/: app.css  app.html  hooks.client.ts  hooks.server.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json  desktop.json  scrap_host.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: constrant.rs  env.rs  lib.rs  main.rs  monitor.rs  tray.rs
app/src-tauri/src/daemon/: args.rs  feeds_update.rs  launcher.rs  locks.rs  mod.rs
app/src/lib/hybrid-apis/feed/: api.ts  impl.ts  types.ts
app/src/lib/hybrid-apis/tauri-regular/: index.ts
app/src/lib/i18n/: index.ts  settings.ts
app/src/lib/i18n/locales/: en.json  zh.json
app/src/lib/themes/: index.ts
app/src/lib/types/: article.ts  loading.ts
app/src/lib/utils/: date.ts  dom.ts  id.ts  text.ts
app/src/lib/widgets/: ArticleRenderWidget.svelte  ContextMenuProvider.svelte  EmbedWebView.svelte  Markdown.svelte  MarkdownImg.svelte  SaveOperatePanel.svelte  types.ts
app/src/lib/windows/: index.ts  lite-edit.ts  settings.ts  utils.ts
app/src/routes/: +layout.svelte  +layout.ts
app/src/routes/about/: +page.svelte
app/src/routes/feeds/create_or_edit/: +page.svelte
app/src/routes/feedsPackage/create_or_edit/: +page.svelte
app/src/routes/main/: +page.svelte
app/src/routes/main/stores/: context.ts  feeds.svelte.ts  index.svelte.ts  loading.svelte.ts  reader.svelte.ts  sprite.svelte.ts  tasks.svelte.ts  toast.ts
app/src/routes/main/stores/articles/: index.svelte.ts
app/src/routes/main/stores/articles/list/: index.svelte.ts
app/src/routes/main/stores/articles/search/: index.svelte.ts
app/src/routes/main/widgets/: AISpritePanel.svelte  ArticleReader.svelte  ArticlesList.svelte  FeedsList.svelte  Footer.svelte  ReaderBlankIndicator.svelte  SearchBar.svelte  types.ts
app/src/routes/settings/: +page.svelte
crates/: .gitignore
crates/feed_api_rs/: Cargo.toml
crates/feed_api_rs/src/: application_context.rs  lib.rs  utils.rs
crates/feed_api_rs/src/features/: api.rs  impl_default.rs  mod.rs
crates/feed_api_rs/src/startup/: init_app_config.rs  init_llm.rs  init_logger.rs  init_user_profile.rs  mod.rs  task.rs  types.rs
crates/intelligent/: Cargo.toml
crates/intelligent/src/: lib.rs
crates/intelligent/src/article_processor/: assistant.rs  llm_processor.rs  melt.rs  mod.rs  optimizer.rs  purge.rs  types.rs
crates/intelligent/src/article_processor/prompts/: assistant_suffix.prompt  assistant_sys.prompt  melt_suffix.prompt  melt_sys.prompt  optimizer_sys.prompt  purge_suffix.prompt  purge_sys.prompt
crates/intelligent/src/article_processor/prompts/depreciated/: optimizer_sys.to-markdown.prompt
crates/llm/: Cargo.toml
crates/llm/src/: connector.rs  lib.rs  llm_agent.rs
crates/llm/src/providers/: llm_glm.rs  llm_mistral.rs  llm_ollama.rs  llm_openaibase_like.rs  llm_platform.rs  mod.rs  types.rs
crates/ollama/: Cargo.toml
crates/ollama/src/: lib.rs
crates/recorder/: Cargo.toml
crates/recorder/src/: article_recorder_service.rs  lib.rs  operator.rs  path.rs
crates/recorder/src/entity/: article_record.rs  mod.rs
crates/scrap/: Cargo.toml
crates/scrap/src/: article_reader.rs  connector.rs  lib.rs  simulator.rs  types.rs
crates/scrap/src/rss/: mod.rs
crates/scrap/src/search/: baidu.rs  bing.rs  mod.rs  selector_extensions.rs  types.rs  utils.rs
crates/tauri-plugin-feed-api/: Cargo.toml  build.rs  bun.lockb  package.json
crates/tauri-plugin-feed-api/guest-js/: api.ts  impl.ts  index.ts  tauri-regular.ts  types.ts
crates/tauri-plugin-feed-api/permissions/: default.toml
crates/tauri-plugin-feed-api/permissions/autogenerated/: reference.md
crates/tauri-plugin-feed-api/permissions/autogenerated/commands/: add_feed.toml  add_feeds_package.toml  change_feed_data.toml  chat_with_article_assistant.toml  download_ollama.toml  get_app_config.toml  get_feeds_by_package.toml  get_feeds_packages.toml  get_ollama_status.toml  launch_ollama.toml  mark_as_read.toml  open_article_external.toml  query_by_id.toml  read_feed_contents.toml  remove_feed.toml  remove_feeds_package.toml  rename_feed.toml  rename_feeds_package.toml  scrap_text_by_url.toml  search_contents_by_keyword.toml  set_app_config.toml  set_favorite.toml  update_article_by_source.toml  update_feed_contents.toml
crates/tauri-plugin-feed-api/permissions/schemas/: schema.json
crates/tauri-plugin-feed-api/src/: commands.rs  lib.rs  scrap_host.rs  state.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  llm_endpoint.rs
docs/: 1、项目概述.md  2、架构概览.md  3、工作流程.md  Introduction-of-the-solution-ja.md  Introduction-of-the-solution-zh.md  Introduction-of-the-solution.md  __Litho_Summary_Brief__.md  __Litho_Summary_Detail__.md  how-to-use-en.md  how-to-use-zh.md
docs/4、深入探索/: AI处理域.md  前端展示域.md  数据抓取域.md  数据持久化域.md  状态管理域.md  系统启动与配置域.md  系统集成域.md  配置管理域.md
litho.docs/: 1、项目概述.md  2、架构概览.md  __Litho_Summary_Detail__.md
litho.docs/4、深入探索/: AI能力集成域.md  内容获取与处理域.md  数据持久化域.md  用户界面域.md
