[workspace]
resolver = "2"
members = ["app/src-tauri", "crates/*"]

[workspace.dependencies]
### asynchronous
tokio = { version = "1.45.1", features = ["full"] }

### communication
reqwest = { version = "0.12.20", features = ["gzip", "deflate", "json"] }

### error chains
anyhow = "1.0.98"
thiserror = "2.0.12"

### serialization & deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27.1", features = ["derive"] }
toml = "0.8.23"

### logging
log = "0.4.27"
spdlog-rs = "0.4.3"

### utilities
chrono = "0.4.41"

### tauri runtime
tauri = { version = "2.6.0" }

### diagnostic
#### samply外部执行的很好

[profile.release]
codegen-units = 1
lto = 'thin'
opt-level = 3
panic = "abort"
strip = "none"    #Possible string values of strip are "none", "debuginfo", and "symbols". The default is "none".

[profile.profiling]
inherits = "release"
debug = true

[profile.dev]
incremental = true

# use samply to generate the profiling flame-chart.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[patch.crates-io]
#markup5ever = { path = "crates/markup5ever" }