[workspace]
resolver = "2"
members = ["app/src-tauri", "crates/*"]

[workspace.dependencies]
### asynchronous
tokio = { version = "1.52.3", features = ["full"] }
futures = "0.3"

### communication
reqwest = { version = "0.13.4", features = ["gzip", "deflate", "brotli", "json"] }

### error chains
anyhow = "1.0.102"
thiserror = "2.0.18"

### serialization & deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.28.0", features = ["derive"] }
toml = "1.1.2"

### logging
log = "0.4.32"
spdlog-rs = "0.5.3"

### utilities
chrono = "0.4.45"
sys-locale = "0.3.2"

### tauri runtime
tauri = { version = "2.11.2" }
tauri-plugin-notification = "2.3.3"

### diagnostic
#### samply外部执行的很好

[profile.release]
codegen-units = 1
lto = 'thin'
opt-level = 3
panic = "abort"
strip = "none"    #Possible string values of strip are "none", "debuginfo", and "symbols". The default is "none".

[profile.profiling]
inherits = "release"
debug = true

[profile.dev]
incremental = true

# use samply to generate the profiling flame-chart.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[patch.crates-io]
#markup5ever = { path = "crates/markup5ever" }
