[package]
name = "qino-feed-client"
version = "0.9.5"
description = "Qino Feed"
authors = ["Sopaco"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qino_feed_client_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = ["tray-icon", "unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sentry = "0.37.0"
anyhow = "1.0.97"
feed_api_rs = { path = "../../crates/feed_api_rs" }
types = { path = "../../crates/types" }
recorder = { path = "../../crates/recorder" }
ollama = { path = "../../crates/ollama" }
fslock = "0.2.1"
tokio = { version = "1.44.1", features = ["full"] }
spdlog-rs = "0.4.1"

### tauri runtime plugins
tauri-plugin-feed-api = { path = "../../crates/tauri-plugin-feed-api" }
tauri-plugin-shell = "2.2.0"
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-os = "2.2.1"
tauri-plugin-dialog = "2.2.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.2.0"
tauri-plugin-single-instance = "2.2.2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = 'thin'
opt-level = 3
panic = "abort"
strip = "none"
