[package]
name = "qino-feed-client"
version = "0.9.9"
description = "Qino Feed"
authors = ["Sopaco"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qino_feed_client_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
# 本crate的特定的依赖
sentry = "0.37.0"
fslock = "0.2.1"
tauri-plugin-shell = "2.2.1"
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-os = "2.2.1"
tauri-plugin-dialog = "2.2.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.3.0"
tauri-plugin-single-instance = "2.2.3"

# 对workspace中其他crate的依赖
feed_api_rs = { path = "../../crates/feed_api_rs" }
types = { path = "../../crates/types" }
recorder = { path = "../../crates/recorder" }
ollama = { path = "../../crates/ollama" }
tauri-plugin-feed-api = { path = "../../crates/tauri-plugin-feed-api" }

# 与workspace共享配置的依赖
tauri = { workspace = true, features = ["tray-icon", "unstable"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
spdlog-rs = { workspace = true }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = 'thin'
opt-level = 3
panic = "abort"
strip = "none"
