[package]
name = "feed_api_rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# 本crate的特定的依赖
open = "5.3.1"

# 对workspace中其他crate的依赖
scrap = { path = "../scrap" }
llm = { path = "../llm" }
intelligent = { path = "../intelligent" }
recorder = { path = "../recorder" }
ollama = { path = "../ollama" }
types = { path = "../types" }

# 与workspace共享配置的依赖
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
spdlog-rs = { workspace = true }                    # 开启异步需要添加 features = ["multi-thread"]
chrono = { workspace = true }
tauri = { workspace = true }

