[package]
name = "intelligent"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# 本crate的特定的依赖

# 对workspace中其他crate的依赖
llm = { path = "../llm" }
types = { path = "../types" }

# 与workspace共享配置的依赖
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["gzip", "deflate", "json"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
spdlog-rs = { workspace = true }
chrono = { workspace = true }
sys-locale = { workspace = true }
